fix: collapse OOD secondary menu on mobile with user icon dropdown

--- a/web/themes/custom/ood/css/style.css
+++ b/web/themes/custom/ood/css/style.css
@@ -212,15 +212,7 @@ body {
     margin: 0 auto;
   }
 
-  @media (max-width: 992px) {
-    #secondaryNavbarResponsive {
-      font-size: 0.8rem;
-    }
-
-    #secondaryNavbarResponsive .top-left-menu {
-      width: 50% !important;
-    }
-  }
+  /* mobile secondary nav styles moved outside .open-ondemand nesting - see end of file */
   @media (min-width: 768px) {
     .cilogon-auth-login-form {
       -ms-flex: 0 0 66.666667%;
@@ -279,15 +271,24 @@ body {
       align-items: center;
     }
 
-    @media screen and (min-width: 1024px) {
-      .nav-item {
-        display: flex !important;
-      }
-    }
   }
 
-  #secondaryNavbarResponsive .top-left-menu .nav-item:not(:first-of-type) {
+  #secondaryNav .secondary-nav-toggler {
+    border: none;
+    padding: 0.25rem 0.75rem;
+    margin-left: auto;
+    color: #333;
+    font-size: 1.5rem;
+    background: transparent;
     display: none;
+  }
+  #secondaryNav .secondary-nav-toggler:hover {
+    color: #000;
+  }
+  @media (max-width: 991.98px) {
+    #secondaryNav .secondary-nav-toggler {
+      display: block;
+    }
   }
 
   #block-ood-account-menu .navbar-nav {
@@ -304,69 +305,64 @@ body {
     max-width: 1140px !important;
   }
 
-  #secondaryNavbarResponsive {
-    justify-content: space-between;
-    margin-left: inherit;
-    width: 100%;
+  @media (min-width: 992px) {
+    #secondaryNavbarResponsive {
+      justify-content: space-between;
+      margin-left: inherit;
+      width: 100%;
 
-    .top-left-menu {
-      position: relative;
-      justify-content: flex-start;
-      background-color: #000;
-      padding: .5rem 1rem;
-      width: 50%;
-      overflow: hidden;
-      .nav-item a {
-        color: #fff;
-      }
-
-      li {
+      .top-left-menu {
         position: relative;
+        justify-content: flex-start;
+        background-color: #000;
+        padding: .5rem 1rem;
+        width: 50%;
+        overflow: hidden;
+        .nav-item a {
+          color: #fff;
+        }
+
+        li {
+          position: relative;
+        }
+
+        li:before {
+          content: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10"><polygon points="0,0 10,5 0,10" fill="red"/></svg>');
+          display: inline-block;
+          margin-right: 5px;
+        }
       }
 
-      li:before {
-        content: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="10" height="10" viewBox="0 0 10 10"><polygon points="0,0 10,5 0,10" fill="red"/></svg>');
-        display: inline-block;
-        margin-right: 5px;
+      .top-left-menu:before {
+        content: "";
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: -9999999em;
+        background-color: #000;
       }
-    }
-
-    .top-left-menu:before {
-      content: "";
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      left: 0;
-      right: -9999999em;
-      background-color: #000;
-    }
-    .top-left-menu:after {
-      content: "";
-      position: absolute;
-      right: -76px;
-      top: 0;
-      border-left: 75px solid transparent;
-      border-right: 75px solid transparent;
-      border-bottom: 75px solid var(--header-gray);
-    }
-
-    .navbar-nav {
-      padding: .5rem 1rem;
-      a {
-        font-size: 0.8rem;
-        color: #000;
+      .top-left-menu:after {
+        content: "";
+        position: absolute;
+        right: -76px;
+        top: 0;
+        border-left: 75px solid transparent;
+        border-right: 75px solid transparent;
+        border-bottom: 75px solid var(--header-gray);
       }
-    }
 
-    @media screen and (max-width: 480px) {
-      .navbar-nav a {
-        font-size: 0.7rem;
-        i.bi {
-          display: none;
+      .navbar-nav {
+        padding: .5rem 1rem;
+        a {
+          font-size: 0.8rem;
+          color: #000;
         }
       }
     }
   }
+
+  /* #secondaryMenuCollapse styles moved outside .open-ondemand nesting - see end of file */
 
   .navbar {
     background-color: var(--header-gray) !important;
@@ -378,8 +374,10 @@ body {
     }
   }
 
-  #secondaryNav {
-    background: linear-gradient(90deg, #000 50%, var(--header-gray) 50%);
+  @media (min-width: 992px) {
+    #secondaryNav {
+      background: linear-gradient(90deg, #000 50%, var(--header-gray) 50%);
+    }
   }
 
   #secondaryNav .navbar-nav {
@@ -1159,4 +1157,98 @@ body.page-node-type-affinity-group {
       columns: 3;
     }
   }
+}
+
+/* ==========================================================================
+   Mobile secondary nav (OOD) - outside .open-ondemand nesting for reliability
+   ========================================================================== */
+@media (max-width: 991.98px) {
+  .open-ondemand #secondaryNav.navbar {
+    background-color: #000 !important;
+    padding: 0;
+  }
+  .open-ondemand #secondaryNav .container {
+    padding: 0;
+  }
+  .open-ondemand #secondaryNavbarResponsive {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    font-size: 0.8rem;
+  }
+  .open-ondemand #secondaryNavbarResponsive .top-left-menu {
+    display: flex;
+    flex-direction: row;
+    padding: 0.4rem 1rem;
+  }
+  .open-ondemand #secondaryNavbarResponsive .top-left-menu .nav-item a {
+    color: #fff;
+    font-size: 0.75rem;
+    padding: 0.25rem 0.5rem;
+  }
+  .open-ondemand #secondaryNavbarResponsive .top-left-menu li:before {
+    content: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="8" height="8" viewBox="0 0 10 10"><polygon points="0,0 10,5 0,10" fill="red"/></svg>');
+    display: inline-block;
+    margin-right: 3px;
+  }
+  .open-ondemand #secondaryNav button.secondary-nav-toggler {
+    color: #fff;
+    font-size: 1.25rem;
+    padding: 0;
+    margin: 0 0.75rem 0 auto;
+    display: flex;
+    align-items: center;
+    align-self: center;
+    line-height: 1;
+    border: none;
+    background: transparent;
+    height: 100%;
+  }
+  .open-ondemand #secondaryNav button.secondary-nav-toggler:hover,
+  .open-ondemand #secondaryNav button.secondary-nav-toggler:focus {
+    color: #ccc;
+  }
+  .open-ondemand #secondaryNavbarResponsive .top-left-menu .nav-item:not(:first-of-type) {
+    display: none;
+  }
+}
+
+#secondaryMenuCollapse {
+  background-color: #dddee0 !important;
+  border-bottom: 1px solid #ddd;
+}
+#secondaryMenuCollapse .container {
+  display: flex;
+  justify-content: flex-end;
+}
+#secondaryMenuCollapse .navbar-nav {
+  padding: 0.5rem 0;
+  flex-direction: column;
+  align-items: flex-end;
+  background-color: transparent !important;
+}
+#secondaryMenuCollapse .nav-link {
+  padding: 0.4rem 1rem;
+  font-size: 0.85rem;
+  color: #333;
+  text-align: right;
+}
+#secondaryMenuCollapse .nav-link:hover {
+  color: var(--ood-red, #ca1236);
+}
+#secondaryMenuCollapse .dropdown-menu {
+  position: static !important;
+  float: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+  background: transparent;
+  box-shadow: none;
+  text-align: right;
+}
+#secondaryMenuCollapse .dropdown-item {
+  padding: 0.4rem 1rem;
+  font-size: 0.85rem;
+  text-align: right;
 }
